fixed white space and text wrapping

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-body {
-  /* height: 100vh;
-  overscroll-behavior-y: contain; */
-  height: auto;           /* or min-height: 100vh */
+html, body {
+  /* overscroll-behavior-y: contain;  */
+  min-height: 100vh;
+  background-color: #00008a;
 
 }
 
@@ -123,6 +123,8 @@ div.container-fluid {
   font-size: 41px;
   word-spacing: -1px;
   font-style: bold;
+  overflow-wrap: break-word;
+  word-break: break-word; 
 }
 
 #aqua {
